Remoção das sugestões de preenchimento no form em Contato
- Havia um problema que não enviava o formulário quando algum dos inputs eram preenchidos com uma sugestão de preenchimento (preenchimento esse que fica armazenada no navegador). Para isso adicionei o autocomplete="off".

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -58,23 +58,23 @@
                     <!-- Nome -->
                     <div class="label_input">
                         <label for="ipt-nome">Nome</label>
-                        <input type="text" name="nome" id="ipt-nome" placeholder="Seu nome..." required>
+                        <input type="text" name="nome" id="ipt-nome" autocomplete="off" placeholder="Seu nome..." required>
                     </div>
 
                     <!-- E-mail -->
                     <div class="label_input">
                         <label for="ipt-Email">E-mail</label>
-                        <input type="email" name="email" id="ipt-Email" placeholder="Seu e-mail..." required>
+                        <input type="email" name="email" id="ipt-Email" autocomplete="off" placeholder="Seu e-mail..." required>
                     </div>
                 </div>
 
                 <!-- Assunto -->
                 <label for="ipt-assunto">Assunto</label>
-                <input type="text" name="assunto" id="ipt-assunto" placeholder="Assunto a tratar..." required>
+                <input type="text" name="assunto" id="ipt-assunto" autocomplete="off" placeholder="Assunto a tratar..." required>
 
                 <!-- Mensagem -->
                 <label for="ipt-mensagem">Mensagem</label>
-                <textarea type="text" name="mensagem" id="ipt-mensagem" rows="5" placeholder="Fale o que queira..." required></textarea>
+                <textarea type="text" name="mensagem" id="ipt-mensagem" autocomplete="off" rows="5" placeholder="Fale o que queira..." required></textarea>
                 
                 <!-- Redirecionar para emailEnviado.html após o envio -->
                 <input type="hidden" name="_next" value="https://caiombm.github.io/Devfolio/pages/emailEnviado.html">
