--- a/pages/contato.html
+++ b/pages/contato.html
@@ -108,12 +108,12 @@
                     <span>Github</span>
                 </a>
                 <!-- Rede social - Linkedin -->
-                <a href="https://www.linkedin.com/in/caio-montenegro-486571250/" target="_blank" class="contentIcon">
+                <a href="https://www.linkedin.com/in/caio-montenegro-486571250" target="_blank" class="contentIcon">
                     <i class="bi bi-linkedin"></i>
                     <span>Linkedin</span>
                 </a>
                 <!-- Rede social - Instagram -->
-                <a href="https://www.instagram.com/ccaiokj" target="_blank" class="contentIcon">
+                <a href="https://www.instagram.com/caiomontenegro.web" target="_blank" class="contentIcon">
                     <i class="bi bi-instagram"></i>
                     <span>Instagram</span>
                 </a>
