Alteração da foto da Home

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <!-- Imagem + Redes sociais -->
         <section class="mainParte2">
-            <img src="img/Caio.jpg" alt="Imagem de Caio Montenegro">
+            <img src="img/CaioNoPC.jpg" alt="Imagem de Caio Montenegro">
 
             <!-- Container das redes sociais -->
             <div>
