Remoção do link no nome "Caio Montenegro" no header

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -21,7 +21,7 @@
         <nav>
             <!-- Div que engloba o nome e o menu hamburguer do header -->
             <div class="nomeIcone">
-                <a href="index.html" class="nav-nome">Caio Montenegro</a>
+                <p class="nav-nome">Caio Montenegro</p>
     
                 <!-- Abrir menu -->
                 <i class="bi bi-list icon-menuHeader"></i>
