Atualização do texto do Sobre Mim

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -50,7 +50,7 @@
             <!-- Sobre Mim-->
             <div id="sobreMim">
                 <h1 class="animate__animated animate__bounceInDown">Sobre Mim</h1>
-                <p>Eu sou Caio Montenegro, tenho 21 anos, sou de Recife-PE (onde também moro) e terminei a faculdade de Tecnólogo em Análise e Desenvolvimento de Sistemas no final de 2024. Minha jornada como desenvolvedor web front-end no primeiro semestre de 2023 e desde então venho estudando e procurando descobrir mais sobre como montar protótipos e transformar protótipos em código.</p>
+                <p> EU sou Caio Montenegro, morador de Recife-PE, formado no curso de Análise e Desenvolvimento de Sistemas (ADS) e desenvolvedor Web Front-End onde estou constantemente buscando melhorias. Cada projeto é uma oportunidade de aprendizado e aprimoramento tanto para criar protótipos, quanto para transformar protótipo em código.</p>
             </div>
 
             <!-- Tecnologias e Ferramentas -->
