Alteração do atributo tittle que fica na parte das tecnologias
- Agora ao passar o cursos do mouse pelo container que está a imagem e o nome da tecnologia, irá aparecer. Antes aparecia somente quando o mouse estava por cima da imagem da tecnologia.

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -60,28 +60,28 @@
                 <!-- Container com os icos -->
                 <div class="containerIconsTecs">
                     <!-- Icon - HTML 5 -->
-                    <div class="contentIcosTecs">
-                        <img src="../img/icons/icon-html5.png" alt="Ícone do HTML 5" title="HTML 5">
+                    <div class="contentIcosTecs" title="HTML 5">
+                        <img src="../img/icons/icon-html5.png" alt="Ícone do HTML 5">
                         <span>HTML 5</span>
                     </div>
                     <!-- Icon - CSS 3 -->
-                    <div class="contentIcosTecs">
-                        <img src="../img/icons/icon-css3.png" alt="Ícone do CSS 3" title="CSS 3">
+                    <div class="contentIcosTecs" title="CSS 3">
+                        <img src="../img/icons/icon-css3.png" alt="Ícone do CSS 3">
                         <span>CSS 3</span>
                     </div>
                     <!-- Icon - JavaScript -->
-                    <div class="contentIcosTecs">
-                        <img src="../img/icons/icon-javascript.png" alt="Ícone do JavaScript" title="JavaScript">
+                    <div class="contentIcosTecs" title="JavaScript">
+                        <img src="../img/icons/icon-javascript.png" alt="Ícone do JavaScript">
                         <span>JavaScript</span>
                     </div>
                     <!-- Icon - Figma -->
-                    <div class="contentIcosTecs">
-                        <img src="../img/icons/icon-figma.png" alt="Ícone do Figma" title="Figma">
+                    <div class="contentIcosTecs" title="Figma">
+                        <img src="../img/icons/icon-figma.png" alt="Ícone do Figma">
                         <span>Figma</span>
                     </div>
                     <!-- Icon - GitHub -->
-                    <div class="contentIcosTecs">
-                        <img src="../img/icons/icon-github.png" alt="Ícone do GitHub" title="GitHub">
+                    <div class="contentIcosTecs"  title="GitHub">
+                        <img src="../img/icons/icon-github.png" alt="Ícone do GitHub">
                         <span>GitHub</span>
                     </div>
                 </div>
